fixed scrollbar height for playlist menu

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -68,3 +68,8 @@ html {
   border-radius: 20px;
   /* -webkit-box-shadow: inset 0 0 5px rgb(93, 166, 255); */
 }
+
+::-webkit-scrollbar-track {
+  /* background-color: rgba(62, 62, 62, 0.5); */
+  margin-top: 18px;
+}
